// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`envConfigMap getOptions() should equal to default options when no options are provided 1`] = `
Object {
  "getEnv": [Function],
  "nullPassthru": true,
  "redactedString": "**********",
  "typeTransform": Object {
    "_normalize": [Function],
    "_null": [Function],
    "_undefined": [Function],
    "arrayCommaDelim": [Function],
    "boolean": [Function],
    "number": [Function],
    "object": [Function],
    "string": [Function],
  },
  "undefinedPassthru": true,
}
`;

exports[`envConfigMap sandbox test should equal expected output 1`] = `
Object {
  "DB_ENABLE_PROFILER": true,
  "DB_PASSWORD": "mypassword",
  "ENABLE_CORS": true,
  "EXAMPLE_ARRAY": Array [
    "a",
    1,
  ],
  "EXAMPLE_ARRAY_COMMA_DELIM": Array [
    "id",
    "email",
    "dateCreated",
    "dateModified",
  ],
  "EXAMPLE_OBJECT": Object {
    "retry": 3,
    "timeout": 1000,
  },
  "EXAMPLE_OBJECT_INVALID": undefined,
  "LOG_LEVEL": "info",
  "MISSING_TYPE_TRANSFORM": "passthru          ",
  "NODE_ENV": "test",
  "NULL_PASSTHRU": null,
  "NULL_PASSTHRU_DISALBED": "null",
  "SERVER_HOST": undefined,
  "SERVER_PORT": 8080,
  "UNDEFINED_PASSTHRU": undefined,
  "getOptions": [Function],
  "getRedacted": [Function],
}
`;

exports[`envConfigMap sandbox test should equal expected output 2`] = `
Object {
  "DB_ENABLE_PROFILER": true,
  "DB_PASSWORD": "XXXXXXXXXX",
  "ENABLE_CORS": true,
  "EXAMPLE_ARRAY": Array [
    "a",
    1,
  ],
  "EXAMPLE_ARRAY_COMMA_DELIM": Array [
    "id",
    "email",
    "dateCreated",
    "dateModified",
  ],
  "EXAMPLE_OBJECT": Object {
    "retry": 3,
    "timeout": 1000,
  },
  "EXAMPLE_OBJECT_INVALID": undefined,
  "LOG_LEVEL": "info",
  "MISSING_TYPE_TRANSFORM": "passthru          ",
  "NODE_ENV": "test",
  "NULL_PASSTHRU": null,
  "NULL_PASSTHRU_DISALBED": "null",
  "SERVER_HOST": undefined,
  "SERVER_PORT": 8080,
  "UNDEFINED_PASSTHRU": undefined,
}
`;
